--- a/vue2/01-基础/01-实例.html
+++ b/vue2/01-基础/01-实例.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>01-实例</title>
+    <title>实例</title>
   </head>
   <body>
     <div id="app">
