--- a/vue2/01-基础/05-条件渲染.html
+++ b/vue2/01-基础/05-条件渲染.html
@@ -3,13 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../common.css" />
     <title>条件渲染</title>
   </head>
-  <style>
-    .note {
-      color: #16a085;
-    }
-  </style>
   <body>
     <div id="app">
       <h1 v-if="awesome">1. v-if</h1>
