--- a/vue2/01-基础/06-列表渲染-上.html
+++ b/vue2/01-基础/06-列表渲染-上.html
@@ -3,15 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../common.css" />
     <title>列表渲染</title>
-    <style>
-      #app {
-        padding-bottom: 500px;
-      }
-      .note {
-        color: #16a085;
-      }
-    </style>
   </head>
   <body>
     <div id="app">
