--- a/vue2/01-基础/06-列表渲染-下.html
+++ b/vue2/01-基础/06-列表渲染-下.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>列表渲染-下</title>
-    <style>
-      #app {
-        padding-bottom: 500px;
-      }
-      .note {
-        color: #16a085;
-      }
-    </style>
+    <link rel="stylesheet" href="../common.css" />
   </head>
   <body>
     <div id="app">
