Vue2 自定义组件在解析 DOM 的注意事项 + 更改前面章节措辞

--- a/vue2/01-基础/01-实例.html
+++ b/vue2/01-基础/01-实例.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app">
+      <h1>大部分知识在注释中</h1>
       <h2>{{ message }}</h2>
       <!-- 这里的 message 将不会更新（因为 `Object.freeze()` 的缘故） -->
       <button @click="message = 'new message'">修改 message</button>
