--- a/vue2/01-基础/02-模板语法.html
+++ b/vue2/01-基础/02-模板语法.html
@@ -15,23 +15,23 @@
     <div id="app">
       <h1>1. 插值</h1>
       <h2>1.1 文本插值</h2>
-      <p>使用 Mustache 语法：{{ msg }}</p>
-      <p v-once>使用 v-once 指令：{{ msg }}</p>
+      <p>Mustache 语法：{{ msg }}</p>
+      <p v-once>v-once 指令：{{ msg }}</p>
 
       <h2>1.2 原始 HTML</h2>
-      <p>渲染原始 HTML: {{ rawHtml }}</p>
+      <p>原始 HTML: {{ rawHtml }}</p>
       <p class="warn">
         随意在站点上动态的渲染任意的 HTML 可能会非常危险，因为会很容易导致 XSS 攻击，建议只对可信内容使用 HTML
         插值，绝对不要将用户提供的内容作为插值
       </p>
-      <p>使用 v-html 指令：<span v-html="rawHtml"></span></p>
+      <p>v-html 指令：<span v-html="rawHtml"></span></p>
 
       <h2>1.3 Attribute（属性）</h2>
       <p>Mustache 语法不能作用在属性上，此时需要使用 v-bind</p>
-      <div v-bind:class="className">这个 div 绑定了 `green-color` CSS类</div>
+      <div v-bind:class="className">这个 div 绑定了 green-color CSS class</div>
       <p class="note">
-        对于布尔类型的 attribute v-bind 工作起来会略有不同（有值意味着 `true`），在下面的例子中，如果 `isButtonDisabled`
-        值为 `null`、`undefined` 或 `false` 的时候，该 attribute 甚至不会被渲染到 `button` 元素中
+        对于布尔类型的属性 v-bind 工作起来会略有不同（有值意味着 true），在下面的例子中，如果 isButtonDisabled 值为
+        null、undefined 或 false 的时候，该属性甚至不会被渲染到 button 元素中
       </p>
       <button v-bind:disabled="isButtonDisabled">Button</button>
 
@@ -47,29 +47,29 @@
 
       <h1>2. 指令</h1>
       <p>
-        在我们前面使用到的 v-once、v-html 以及 v-bind 都是 Vue 提供给我们的一些内置指令，简单理解就是带有 `v-`
-        前缀的特殊 attribute，指令的预期是单个 JS 表达式（v-for
-        例外）指令的职责就是：当表达式的值改变时，将其改变的影响作用于 DOM 之上
+        在我们前面使用到的 v-once、v-html 以及 v-bind 都是 Vue 提供给我们的一些内置指令，简单理解就是带有 v-
+        前缀的特殊属性
+        <br />
+        指令的预期：单个 JS 表达式（v-for 例外）
+        <br />
+        指令的职责：表达式的值改变时，将其改变的影响作用于 DOM 之上
       </p>
-      <p v-if="seen">now you seen me</p>
-      <p>
-        正如上面的例子一样，我们通过 v-if 这个指令，来监听 seen 这个 property 表达式的值（true 或
-        false），当这个值改变时控制元素插入与移除，你可以在控制台修改 `vm.seen` 的值试试
-      </p>
+      <p v-if="seen">你现在看到我了（这是 v-if 渲染的内容，你可以试试 <strong>vm.seen = false</strong>）</p>
+      <p v-else>没了，是不是很神奇！</p>
 
       <h2>2.1 参数</h2>
       <p>
-        一些指令是可以接收一个参数的，通过在指令名称后添加 `:`（冒号）表示，我们在 1.3 Attribute 中已经通过 v-bind
-        演示过了，下面我们通过 v-on 来监听 DOM 事件改变 `msg` 这个 property 的值
+        一些指令能够接收一个参数的，在指令名称后以 `:`（冒号）表示，在上面已经通过 v-bind 演示过了，我们下面来试试用
+        v-on 来监听 DOM 事件触发来响应式的更新 msg 的值
       </p>
-      <button v-on:click="msg = 'new message'">更新 msg 的值</button>
+      <button v-on:click="msg = 'new message'">更新 msg 的值</button>{{ " " + msg }}
 
       <h2>2.2 动态参数</h2>
       <p class="note">
         Vue2.6+ 新增特性，可以使用方括号包围一个 JS 表达式作为一个指令的参数，下面绑定一个 href 动态属性
       </p>
       <a v-bind:[attributeName]="`https://www.baidu.com/s?wd=${msg}`" target="_blank">百度</a>
-      <p>绑定动态事件（click，当然不止 click 可以绑定）</p>
+      <p>绑定动态事件</p>
       <a href="#" v-on:[event]="doSomeThing">click me</a>
       <p class="warn">动态参数也会存在一些约束</p>
       <h3>
