--- a/vue2/01-基础/test.html
+++ b/vue2/01-基础/test.html
@@ -25,6 +25,9 @@
           },
         },
         methods: {
+          say(msg) {
+            console.log(msg)
+          },
           test: function () {
             // 可以手动更改一下 this.n1 的值，发现这个方法也会被调用
             // NOTE: 我的理解，Vue 实例的响应式数据如果有 DOM 绑定，在数据变更后，居然是重新渲染整个相关的 DOM 节点（包括其他绑定在 DOM 节点上的响应式数据），我还以为是局部单个刷新的，应该是以组件为 DOM 更新的单元了，当前这个 Vue 实例就是以 #app 选择器的内容为 DOM 更新的一个单元
